--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section class="conteiner principal">
-        <div>
+        <div class="container_caixa">
             <h1 class="container_titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua
                 por um preço único. </h1>
             <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container_imagem" >
