--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="conteiner principal">
+    <section class="container principal">
         <div class="container_caixa">
             <h1 class="container_titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua
                 por um preço único. </h1>
@@ -19,6 +19,15 @@
             <a href="www.alura.com.br" class="container_botao botao_secundario">Assinar somente o Alura+</a>
             <p class="container_aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <div class="container_descricao">
+            <h2 class="descricao_titulo">Assista do seu jeito</h2>
+            
+        </div>
+
     </section>
 </body>
 </html>
