--- a/index.html
+++ b/index.html
@@ -41,5 +41,23 @@
         <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario_imagem">
     </section>
 
+    <section class="dispositivos">
+        <h2 class="dispositivos_titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos_lista">
+            <li>
+                <img src="img/tv.png" alt="Ícone de televisão">
+                <h3 class="lista_item">TV</h3>
+            </li>
+            <li>
+                <img src="img/computador.png" alt="Ícone de computador">
+                <h3 class="lista_item">Computador</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="Ícone de celular">
+                <h3 class="lista_item">Celular</h3>
+            </li>
+        </ul>
+    </section>
+
 </body>
 </html>
